--- a/TestAngular2/TestAngular2.csproj
+++ b/TestAngular2/TestAngular2.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Content Include="app\app.animations.css" />
     <Content Include="app\app.animations.js" />
+    <TypeScriptCompile Include="app\app-routing.module.ts" />
     <TypeScriptCompile Include="app\app.config.ts" />
     <Content Include="app\app.css" />
     <TypeScriptCompile Include="app\app.module.ng1.ts" />
@@ -194,6 +195,7 @@
     <Content Include="app\img\phones\t-mobile-mytouch-4g.4.jpg" />
     <Content Include="app\img\phones\t-mobile-mytouch-4g.5.jpg" />
     <TypeScriptCompile Include="app\ng1component.ts" />
+    <TypeScriptCompile Include="app\ng2.app.component.ts" />
     <TypeScriptCompile Include="app\phone-detail\phone-detail.component.ts" />
     <Content Include="app\phone-detail\phone-detail.component.spec.js" />
     <Content Include="app\phone-detail\phone-detail.module.js" />
